# test

./: .drone.yml  .gitmodules  README  process_test.js
cpp/: Chal_002.cpp  hello.cpp  paint.cpp
cpp/Chal/: Chal007.cpp
cpp/algorithms/: binary_search.cpp  bipartite_graph.cpp  sort.cpp  topological_sort.cpp
cpp/atcoder/: compile_flags.txt
cpp/atcoder/abc235/: memo
cpp/atcoder/pow/: Main.cpp  input.txt
cpp/atcoder/practice/: dp.cpp
cpp/atcoder/practice_1/: Main.cpp  input.txt
cpp/atcoder/segtree/: Main.cpp  template.cpp
cpp/contest_challenge_book/: 1-6-1.cpp  1-6-2.cpp  2-1-1.cpp  2-1-2.cpp  2-1-3.cpp  2-1-4.cpp  2-3-1.cpp  2-3-10.cpp  2-3-11.cpp  2-3-2.cpp  2-3-3.cpp  2-3-4.cpp  2-3-5.cpp  2-3-6.cpp  2-3-7.cpp  2-3-9.cpp  2-5-1.cpp  2-5-2.cpp  2-6-1.cpp  2-7-1.cpp  2-7-2.cpp  2-7-3-dp.cpp  2-7-3.cpp  3-1-1.cpp  3-1-2.cpp  3-1-3.cpp  3-2-1.cpp  3-2-2.cpp  3-2-3.cpp  3-2-4.cpp  3-3-4-segment.cpp  3-3-4.cpp  3-4-1.cpp  3-4-2.cpp  3-4-3.cpp  bellman-ford.cpp  binary-indexed-tree.cpp  dijkstra.cpp  dijkstra_fast.cpp  graph.cpp  (+7 more)
cpp/graph/: BasicGraph.h  Graph.h  GraphEdge.h  GraphVertex.h  Makefile  NavigationNode.h  main  main.cpp
cpp/numberlink/: maker.cpp  solve.cpp  solver.cpp  solver.cpp.bak
deno/: hello.ts
erlang/erlcount/ebin/: erlcount.app
erlang/erlcount/src/: erlcount_dispatch.erl  erlcount_lib.erl  erlcount_sup.erl
erlang/geo/: geometry.erl
erlang/kitty/: kitty.erl  kitty2.erl  kitty_gen_server.erl  my_server.erl
erlang/message/: message.erl
erlang/naive_tcp/: naive_tcp.erl
erlang/ppool/: Emakefile  ppool_worker_sup.erl
erlang/ppool/src/: ppool.erl  ppool_serv.erl  ppool_sup.erl  ppool_supersup.erl
erlang/ppool/test/: ppool_nagger.erl
erlang/ppool_isolate/: ppool_tests.erl
erlang/release/: erlcount-1.0.config  erlcount-1.0.rel
erlang/reminder/src/: event.erl  (+2 more)
erlang/rpn/: rpn.erl
erlang/sample_fsm/: dog.erl
erlang/trade/: trade.erl  trade_calls.erl
erlang/tree/: tree.erl
hs/99questions/: a.csv  binaryTree.hs  combinations.hs  decode.hs  diff_select.hs  dropEvery.hs  duplicate.hs  elementAt.hs  eliminate.hs  encodeDirect.hs  flatten.hs  group.hs  insertAt.hs  isPrime.hs  length.hs  pack.hs  packEncode.hs  packEncode2.hs  palindrome.hs  range.hs  removeAt.hs  replicate.hs  rnd_permu.hs  rnd_select.hs  rotate.hs  slice.hs  split.hs
hs/aeson-test/: aeson-test.cabal  main.hs
hs/ai-samples/: ai-samples.cabal
hs/ai-samples/app/: Astar.hs
hs/ai-samples/data/: astar1
hs/analizer/: analizer.cabal
hs/args/: Main.hs.html  args.hs  cmdArgs.hs  cmdArgs.tix  hpc_index_alt.html
hs/args-test/: args-test.cabal  cmdArgs.hs
hs/conduit-tutorial/: conduit-tutorial.cabal
hs/configFile-test/: Main.hs  configFile-test.cabal
hs/experiments/: experiments.cabal
hs/fay-sample/: .gitignore  fay-sample.cabal
hs/frp/shooting-netwire/: memo  shooting-netwire.cabal  stack.yaml
hs/frp/shooting-netwire/src/: Game.hs  Graphics.hs  Input.hs  Main.hs  Types.hs
hs/frp/shooting-yampa/: shooting-yampa.cabal
hs/frp/shooting-yampa/src/: Input.hs  Main.hs
hs/frp/yampa-sample/: README.md  yampa-sample.cabal
hs/frp/yampa-sample/src/: Arrows.hs  Main.hs  Pswitch.hs  YampaGui.hs
hs/ghcjs-sample/: ghcjs-sample.cabal  stack.yaml
hs/hello/: hello.hs  helloUI.hs
hs/http/: http.hs
hs/lens-test/: lens-test.cabal
hs/lyhgg/: Main.hs  lyhgg.cabal
hs/monadt/: monadt.cabal
hs/network-conduit/: network-conduit.cabal
hs/onemax/: .gitignore  CHANGELOG.md  Main.hs  default.nix  onemax.cabal
hs/parallel-concurrent/: .gitignore  parallel-concurrent.cabal
hs/parsec-test/: Main.hs  parsec-test.cabal
hs/pearls/: pearls.cabal
hs/quiz/: fizzbuzz.hs  stairs.hs
hs/sed_maker/: .gitignore  Main.hs  sample  sample.bak  sample.conf  sed-maker.cabal
hs/stack/: stack.hs
hs/type/: card.hs  monad.hs  monoid.hs  mymonad.hs  mymonadT.hs
hs/xml/: Main.hs  test.xml  xml.cabal
java/: .gitignore
java/chat-server/: .project
java/simple-state-server/: build.gradle
lvs/: Vagrantfile
lvs_by_chef/: Vagrantfile
node/: .gitignore  hello.js  interval.js  tcp.js
node/flux-simple/: Main.js  index.html  package.json
node/react-tutorial/: index.html
node/webdbexpress/: app.js  package.json
node_beginner/: index.js  requestHandlers.js  router.js  server.js
python3/selenium/: .gitignore  deepl.py  requirements.txt
python3/sound/: .gitignore  create.py  requirements.txt  stream_midi.py  stream_sound.py
ruby/: map.rb
rust/maze/: Cargo.toml
scala/: .gitignore
scala/ActorSamples/: build.sbt
scala/ChatServer/: build.sbt
test/: client_test.js  http_test.html  http_test.js  socket_server.js  socket_test.js
tool/: lsfiles_by_ext.sh
vimscript/: test.vim
(+387 files in other folders)
