name:                shooting-netwire
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/shooting-netwire#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shooting-netwire
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Input
  build-depends:       netwire
                     , GLUT
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
