name:                yampa-sample
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/yampa#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable arrows-sample
  hs-source-dirs:      src
  main-is:             Arrows.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable yampa-sample
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       Yampa
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable yampa-sample-gui
  hs-source-dirs:      src
  main-is:             YampaGui.hs
  build-depends:       Yampa
                     , GLUT
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable pswtich
  hs-source-dirs:      src
  main-is:             Pswitch.hs
  build-depends:       Yampa
                     , GLUT
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
